<resources>
    <string name="app_name">SAT- Student Attendance Tracking</string>
    <string name="prezime">Prezime</string>
    <string name="ime">Ime</string>
    <string name="dodaj_studenta">Dodaj studenta</string>
    <string name="broj_studenta">Broj studenta</string>
    <string name="predmet">Predmet</string>
    <string name="dobrodo_li">DOBRODOŠLI</string>
    <string name="biljezenje_prisutnosti_studenata">BILJEZENJE PRISUTNOSTI STUDENATA</string>
    <string name="start">START</string>
    <string name="username">Username</string>
    <string name="log_in">LOG IN</string>
    <string name="exit">EXIT</string>
    <string name="pregled_studenata">PREGLED STUDENATA</string>
    <string name="prisutnost">PRISUTNOST</string>
    <string name="log_out">Log Out</string>
    <string name="predmeti">Predmeti</string>
    <string name="dodaj_predmet">Dodaj predmet</string>
    <string name="ime_predmeta">Ime predmeta</string>
    <string name="dodaj_predavanja">Dodaj Predavanja</string>
    <string name="ime_predavanja">Ime predavanja</string>
    <string name="studenti">Studenti:</string>
    <string name="back">Back</string>
    <string name="upis_prisutnosti">Upis prisutnosti</string>
    <string name="dodaj">Dodaj</string>
    <string name="title_activity_listview">listview</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>