<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textW1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/dimen_headerMargin"
        android:text="@string/dobrodo_li"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_headerFontSize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textW2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textW1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/biljezenje_prisutnosti_studenata"
        android:textColor="@color/white"
        android:textSize="19dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="250dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/button"
        android:text="@string/start" />

</RelativeLayout>