<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textW9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/upis_prisutnosti"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_headerFontSize"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerOdaberiPredmet"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/textW9" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinnerOdaberiPredavanje"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/spinnerOdaberiPredmet" />

    <TextView
        android:id="@+id/textW10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerOdaberiPredavanje"
        android:text="@string/studenti"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <ListView
        android:id="@+id/ListView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textW10"
        android:layout_marginBottom="110dp" />

    <Button
        android:id="@+id/btnDodaj1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/button"
        android:text="@string/dodaj" />

    <Button
        android:id="@+id/back3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/button"
        android:text="@string/back" />


</RelativeLayout>